parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LOCALPARAM

Grammar

Rule 0     S' -> source
Rule 1     source -> moduledec source
Rule 2     source -> empty
Rule 3     moduledec -> MODULE ID paramdec portdec ; modulecontent ENDMODULE
Rule 4     moduledec -> MODULE ID portdec ; modulecontent ENDMODULE
Rule 5     paramdec -> # ( params )
Rule 6     params -> oneparam paramplus
Rule 7     params -> empty
Rule 8     paramplus -> , oneparam paramplus
Rule 9     paramplus -> empty
Rule 10    oneparam -> PARAMETER ID = arithexpr
Rule 11    arithexpr -> NUMBER
Rule 12    arithexpr -> ID
Rule 13    portdec -> ( ports
Rule 14    ports -> porttype portplus
Rule 15    ports -> )
Rule 16    portplus -> wireslice idsterminal portplus
Rule 17    portplus -> empty
Rule 18    idsterminal -> ID portterminal
Rule 19    idsterminal -> ID , idsterminal
Rule 20    portterminal -> )
Rule 21    portterminal -> , porttype
Rule 22    wireslice -> [ arithexpr : arithexpr ]
Rule 23    wireslice -> empty
Rule 24    porttype -> inout
Rule 25    porttype -> inout wiretype
Rule 26    inout -> INPUT
Rule 27    inout -> OUTPUT
Rule 28    modulecontent -> wiredec ; modulecontent
Rule 29    modulecontent -> assign ; modulecontent
Rule 30    modulecontent -> always modulecontent
Rule 31    modulecontent -> moduleinst ; modulecontent
Rule 32    modulecontent -> empty
Rule 33    wiredec -> wiretype [ arithexpr : arithexpr ] idassigns
Rule 34    wiredec -> wiretype [ arithexpr : arithexpr ] ID [ arithexpr : arithexpr ]
Rule 35    wiredec -> wiretype idassigns
Rule 36    idassigns -> oneidassign
Rule 37    idassigns -> oneidassign , idassigns
Rule 38    oneidassign -> ID
Rule 39    oneidassign -> ID = wireexpr
Rule 40    wiretype -> WIRE
Rule 41    wiretype -> REG
Rule 42    wiretype -> LOGIC
Rule 43    assign -> ASSIGN lhs = wireexpr
Rule 44    always -> ALWAYS @ sensitivity alwayscontblock
Rule 45    always -> ALWAYSFF @ sensitivity alwayscontblock
Rule 46    always -> ALWAYSCOMB alwayscontblock
Rule 47    sensitivity -> ( edge ID )
Rule 48    edge -> POSEDGE
Rule 49    edge -> NEGEDGE
Rule 50    alwayscontblock -> BEGIN alwayscont END
Rule 51    alwayscont -> oneassign ; alwayscont
Rule 52    alwayscont -> ifblock alwayscont
Rule 53    alwayscont -> ifblock elseblock alwayscont
Rule 54    alwayscont -> empty
Rule 55    oneassign -> lhs = wireexpr
Rule 56    oneassign -> lhs NONBLOCK wireexpr
Rule 57    ifblock -> IF ( wireexpr ) BEGIN alwayscont END
Rule 58    elseblock -> ELSE ifblock
Rule 59    elseblock -> ELSE ifblock elseblock
Rule 60    elseblock -> ELSE BEGIN alwayscont END
Rule 61    lhs -> ID
Rule 62    lhs -> ID [ arithexpr : arithexpr ]
Rule 63    lhs -> { lhsconcat }
Rule 64    lhsconcat -> lhs
Rule 65    lhsconcat -> lhs , lhsconcat
Rule 66    wireexpr -> wireval
Rule 67    wireexpr -> wireval wireop wireexpr
Rule 68    wireexpr -> wireval ? wireexpr : wireexpr
Rule 69    wireval -> ALLHIGH
Rule 70    wireval -> ALLLOW
Rule 71    wireval -> LITWIRE
Rule 72    wireval -> NUMBER
Rule 73    wireval -> { wireconcat }
Rule 74    wireval -> ( wireexpr )
Rule 75    wireval -> ID [ arithexpr : arithexpr ]
Rule 76    wireval -> ID [ wireexpr ]
Rule 77    wireval -> unaop wireval
Rule 78    unaop -> ~
Rule 79    unaop -> &
Rule 80    unaop -> ^
Rule 81    unaop -> |
Rule 82    wireval -> ID
Rule 83    wireconcat -> wireexpr
Rule 84    wireconcat -> wireexpr , wireconcat
Rule 85    wireop -> +
Rule 86    wireop -> -
Rule 87    wireop -> *
Rule 88    wireop -> &
Rule 89    wireop -> |
Rule 90    wireop -> ^
Rule 91    wireop -> <
Rule 92    wireop -> >
Rule 93    wireop -> LSHIFT
Rule 94    wireop -> RSHIFT
Rule 95    wireop -> EQ
Rule 96    wireop -> GEQ
Rule 97    wireop -> LEQ
Rule 98    moduleinst -> ID ID ( modportassign )
Rule 99    modportassign -> oneportassign
Rule 100   modportassign -> oneportassign , modportassign
Rule 101   modportassign -> empty
Rule 102   oneportassign -> wireexpr
Rule 103   oneportassign -> . ID ( wireexpr )
Rule 104   empty -> <empty>

Terminals, with rules where they appear

#                    : 5
&                    : 79 88
(                    : 5 13 47 57 74 98 103
)                    : 5 15 20 47 57 74 98 103
*                    : 87
+                    : 85
,                    : 8 19 21 37 65 84 100
-                    : 86
.                    : 103
:                    : 22 33 34 34 62 68 75
;                    : 3 4 28 29 31 51
<                    : 91
=                    : 10 39 43 55
>                    : 92
?                    : 68
@                    : 44 45
ALLHIGH              : 69
ALLLOW               : 70
ALWAYS               : 44
ALWAYSCOMB           : 46
ALWAYSFF             : 45
ASSIGN               : 43
BEGIN                : 50 57 60
ELSE                 : 58 59 60
END                  : 50 57 60
ENDMODULE            : 3 4
EQ                   : 95
GEQ                  : 96
ID                   : 3 4 10 12 18 19 34 38 39 47 61 62 75 76 82 98 98 103
IF                   : 57
INPUT                : 26
LEQ                  : 97
LITWIRE              : 71
LOCALPARAM           : 
LOGIC                : 42
LSHIFT               : 93
MODULE               : 3 4
NEGEDGE              : 49
NONBLOCK             : 56
NUMBER               : 11 72
OUTPUT               : 27
PARAMETER            : 10
POSEDGE              : 48
REG                  : 41
RSHIFT               : 94
WIRE                 : 40
[                    : 22 33 34 34 62 75 76
]                    : 22 33 34 34 62 75 76
^                    : 80 90
error                : 
{                    : 63 73
|                    : 81 89
}                    : 63 73
~                    : 78

Nonterminals, with rules where they appear

always               : 30
alwayscont           : 50 51 52 53 57 60
alwayscontblock      : 44 45 46
arithexpr            : 10 22 22 33 33 34 34 34 34 62 62 75 75
assign               : 29
edge                 : 47
elseblock            : 53 59
empty                : 2 7 9 17 23 32 54 101
idassigns            : 33 35 37
idsterminal          : 16 19
ifblock              : 52 53 58 59
inout                : 24 25
lhs                  : 43 55 56 64 65
lhsconcat            : 63 65
modportassign        : 98 100
modulecontent        : 3 4 28 29 30 31
moduledec            : 1
moduleinst           : 31
oneassign            : 51
oneidassign          : 36 37
oneparam             : 6 8
oneportassign        : 99 100
paramdec             : 3
paramplus            : 6 8
params               : 5
portdec              : 3 4
portplus             : 14 16
ports                : 13
portterminal         : 18
porttype             : 14 21
sensitivity          : 44 45
source               : 1 0
unaop                : 77
wireconcat           : 73 84
wiredec              : 28
wireexpr             : 39 43 55 56 57 67 68 68 74 76 83 84 102 103
wireop               : 67
wireslice            : 16
wiretype             : 25 33 34 35
wireval              : 66 67 68 77

Parsing method: LALR

state 0

    (0) S' -> . source
    (1) source -> . moduledec source
    (2) source -> . empty
    (3) moduledec -> . MODULE ID paramdec portdec ; modulecontent ENDMODULE
    (4) moduledec -> . MODULE ID portdec ; modulecontent ENDMODULE
    (104) empty -> .

    MODULE          shift and go to state 4
    $end            reduce using rule 104 (empty -> .)

    source                         shift and go to state 1
    moduledec                      shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> source .



state 2

    (1) source -> moduledec . source
    (1) source -> . moduledec source
    (2) source -> . empty
    (3) moduledec -> . MODULE ID paramdec portdec ; modulecontent ENDMODULE
    (4) moduledec -> . MODULE ID portdec ; modulecontent ENDMODULE
    (104) empty -> .

    MODULE          shift and go to state 4
    $end            reduce using rule 104 (empty -> .)

    moduledec                      shift and go to state 2
    source                         shift and go to state 5
    empty                          shift and go to state 3

state 3

    (2) source -> empty .

    $end            reduce using rule 2 (source -> empty .)


state 4

    (3) moduledec -> MODULE . ID paramdec portdec ; modulecontent ENDMODULE
    (4) moduledec -> MODULE . ID portdec ; modulecontent ENDMODULE

    ID              shift and go to state 6


state 5

    (1) source -> moduledec source .

    $end            reduce using rule 1 (source -> moduledec source .)


state 6

    (3) moduledec -> MODULE ID . paramdec portdec ; modulecontent ENDMODULE
    (4) moduledec -> MODULE ID . portdec ; modulecontent ENDMODULE
    (5) paramdec -> . # ( params )
    (13) portdec -> . ( ports

    #               shift and go to state 9
    (               shift and go to state 10

    paramdec                       shift and go to state 7
    portdec                        shift and go to state 8

state 7

    (3) moduledec -> MODULE ID paramdec . portdec ; modulecontent ENDMODULE
    (13) portdec -> . ( ports

    (               shift and go to state 10

    portdec                        shift and go to state 11

state 8

    (4) moduledec -> MODULE ID portdec . ; modulecontent ENDMODULE

    ;               shift and go to state 12


state 9

    (5) paramdec -> # . ( params )

    (               shift and go to state 13


state 10

    (13) portdec -> ( . ports
    (14) ports -> . porttype portplus
    (15) ports -> . )
    (24) porttype -> . inout
    (25) porttype -> . inout wiretype
    (26) inout -> . INPUT
    (27) inout -> . OUTPUT

    )               shift and go to state 16
    INPUT           shift and go to state 18
    OUTPUT          shift and go to state 19

    ports                          shift and go to state 14
    porttype                       shift and go to state 15
    inout                          shift and go to state 17

state 11

    (3) moduledec -> MODULE ID paramdec portdec . ; modulecontent ENDMODULE

    ;               shift and go to state 20


state 12

    (4) moduledec -> MODULE ID portdec ; . modulecontent ENDMODULE
    (28) modulecontent -> . wiredec ; modulecontent
    (29) modulecontent -> . assign ; modulecontent
    (30) modulecontent -> . always modulecontent
    (31) modulecontent -> . moduleinst ; modulecontent
    (32) modulecontent -> . empty
    (33) wiredec -> . wiretype [ arithexpr : arithexpr ] idassigns
    (34) wiredec -> . wiretype [ arithexpr : arithexpr ] ID [ arithexpr : arithexpr ]
    (35) wiredec -> . wiretype idassigns
    (43) assign -> . ASSIGN lhs = wireexpr
    (44) always -> . ALWAYS @ sensitivity alwayscontblock
    (45) always -> . ALWAYSFF @ sensitivity alwayscontblock
    (46) always -> . ALWAYSCOMB alwayscontblock
    (98) moduleinst -> . ID ID ( modportassign )
    (104) empty -> .
    (40) wiretype -> . WIRE
    (41) wiretype -> . REG
    (42) wiretype -> . LOGIC

    ASSIGN          shift and go to state 29
    ALWAYS          shift and go to state 30
    ALWAYSFF        shift and go to state 31
    ALWAYSCOMB      shift and go to state 32
    ID              shift and go to state 21
    ENDMODULE       reduce using rule 104 (empty -> .)
    WIRE            shift and go to state 33
    REG             shift and go to state 34
    LOGIC           shift and go to state 35

    modulecontent                  shift and go to state 22
    wiredec                        shift and go to state 23
    assign                         shift and go to state 24
    always                         shift and go to state 25
    moduleinst                     shift and go to state 26
    empty                          shift and go to state 27
    wiretype                       shift and go to state 28

state 13

    (5) paramdec -> # ( . params )
    (6) params -> . oneparam paramplus
    (7) params -> . empty
    (10) oneparam -> . PARAMETER ID = arithexpr
    (104) empty -> .

    PARAMETER       shift and go to state 39
    )               reduce using rule 104 (empty -> .)

    params                         shift and go to state 36
    oneparam                       shift and go to state 37
    empty                          shift and go to state 38

state 14

    (13) portdec -> ( ports .

    ;               reduce using rule 13 (portdec -> ( ports .)


state 15

    (14) ports -> porttype . portplus
    (16) portplus -> . wireslice idsterminal portplus
    (17) portplus -> . empty
    (22) wireslice -> . [ arithexpr : arithexpr ]
    (23) wireslice -> . empty
    (104) empty -> .

    [               shift and go to state 43
    ;               reduce using rule 104 (empty -> .)
    ID              reduce using rule 104 (empty -> .)

    portplus                       shift and go to state 40
    wireslice                      shift and go to state 41
    empty                          shift and go to state 42

state 16

    (15) ports -> ) .

    ;               reduce using rule 15 (ports -> ) .)


state 17

    (24) porttype -> inout .
    (25) porttype -> inout . wiretype
    (40) wiretype -> . WIRE
    (41) wiretype -> . REG
    (42) wiretype -> . LOGIC

    [               reduce using rule 24 (porttype -> inout .)
    ID              reduce using rule 24 (porttype -> inout .)
    ;               reduce using rule 24 (porttype -> inout .)
    WIRE            shift and go to state 33
    REG             shift and go to state 34
    LOGIC           shift and go to state 35

    wiretype                       shift and go to state 44

state 18

    (26) inout -> INPUT .

    WIRE            reduce using rule 26 (inout -> INPUT .)
    REG             reduce using rule 26 (inout -> INPUT .)
    LOGIC           reduce using rule 26 (inout -> INPUT .)
    [               reduce using rule 26 (inout -> INPUT .)
    ID              reduce using rule 26 (inout -> INPUT .)
    ;               reduce using rule 26 (inout -> INPUT .)


state 19

    (27) inout -> OUTPUT .

    WIRE            reduce using rule 27 (inout -> OUTPUT .)
    REG             reduce using rule 27 (inout -> OUTPUT .)
    LOGIC           reduce using rule 27 (inout -> OUTPUT .)
    [               reduce using rule 27 (inout -> OUTPUT .)
    ID              reduce using rule 27 (inout -> OUTPUT .)
    ;               reduce using rule 27 (inout -> OUTPUT .)


state 20

    (3) moduledec -> MODULE ID paramdec portdec ; . modulecontent ENDMODULE
    (28) modulecontent -> . wiredec ; modulecontent
    (29) modulecontent -> . assign ; modulecontent
    (30) modulecontent -> . always modulecontent
    (31) modulecontent -> . moduleinst ; modulecontent
    (32) modulecontent -> . empty
    (33) wiredec -> . wiretype [ arithexpr : arithexpr ] idassigns
    (34) wiredec -> . wiretype [ arithexpr : arithexpr ] ID [ arithexpr : arithexpr ]
    (35) wiredec -> . wiretype idassigns
    (43) assign -> . ASSIGN lhs = wireexpr
    (44) always -> . ALWAYS @ sensitivity alwayscontblock
    (45) always -> . ALWAYSFF @ sensitivity alwayscontblock
    (46) always -> . ALWAYSCOMB alwayscontblock
    (98) moduleinst -> . ID ID ( modportassign )
    (104) empty -> .
    (40) wiretype -> . WIRE
    (41) wiretype -> . REG
    (42) wiretype -> . LOGIC

    ASSIGN          shift and go to state 29
    ALWAYS          shift and go to state 30
    ALWAYSFF        shift and go to state 31
    ALWAYSCOMB      shift and go to state 32
    ID              shift and go to state 21
    ENDMODULE       reduce using rule 104 (empty -> .)
    WIRE            shift and go to state 33
    REG             shift and go to state 34
    LOGIC           shift and go to state 35

    modulecontent                  shift and go to state 45
    wiredec                        shift and go to state 23
    assign                         shift and go to state 24
    always                         shift and go to state 25
    moduleinst                     shift and go to state 26
    empty                          shift and go to state 27
    wiretype                       shift and go to state 28

state 21

    (98) moduleinst -> ID . ID ( modportassign )

    ID              shift and go to state 46


state 22

    (4) moduledec -> MODULE ID portdec ; modulecontent . ENDMODULE

    ENDMODULE       shift and go to state 47


state 23

    (28) modulecontent -> wiredec . ; modulecontent

    ;               shift and go to state 48


state 24

    (29) modulecontent -> assign . ; modulecontent

    ;               shift and go to state 49


state 25

    (30) modulecontent -> always . modulecontent
    (28) modulecontent -> . wiredec ; modulecontent
    (29) modulecontent -> . assign ; modulecontent
    (30) modulecontent -> . always modulecontent
    (31) modulecontent -> . moduleinst ; modulecontent
    (32) modulecontent -> . empty
    (33) wiredec -> . wiretype [ arithexpr : arithexpr ] idassigns
    (34) wiredec -> . wiretype [ arithexpr : arithexpr ] ID [ arithexpr : arithexpr ]
    (35) wiredec -> . wiretype idassigns
    (43) assign -> . ASSIGN lhs = wireexpr
    (44) always -> . ALWAYS @ sensitivity alwayscontblock
    (45) always -> . ALWAYSFF @ sensitivity alwayscontblock
    (46) always -> . ALWAYSCOMB alwayscontblock
    (98) moduleinst -> . ID ID ( modportassign )
    (104) empty -> .
    (40) wiretype -> . WIRE
    (41) wiretype -> . REG
    (42) wiretype -> . LOGIC

    ASSIGN          shift and go to state 29
    ALWAYS          shift and go to state 30
    ALWAYSFF        shift and go to state 31
    ALWAYSCOMB      shift and go to state 32
    ID              shift and go to state 21
    ENDMODULE       reduce using rule 104 (empty -> .)
    WIRE            shift and go to state 33
    REG             shift and go to state 34
    LOGIC           shift and go to state 35

    always                         shift and go to state 25
    modulecontent                  shift and go to state 50
    wiredec                        shift and go to state 23
    assign                         shift and go to state 24
    moduleinst                     shift and go to state 26
    empty                          shift and go to state 27
    wiretype                       shift and go to state 28

state 26

    (31) modulecontent -> moduleinst . ; modulecontent

    ;               shift and go to state 51


state 27

    (32) modulecontent -> empty .

    ENDMODULE       reduce using rule 32 (modulecontent -> empty .)


state 28

    (33) wiredec -> wiretype . [ arithexpr : arithexpr ] idassigns
    (34) wiredec -> wiretype . [ arithexpr : arithexpr ] ID [ arithexpr : arithexpr ]
    (35) wiredec -> wiretype . idassigns
    (36) idassigns -> . oneidassign
    (37) idassigns -> . oneidassign , idassigns
    (38) oneidassign -> . ID
    (39) oneidassign -> . ID = wireexpr

    [               shift and go to state 52
    ID              shift and go to state 54

    idassigns                      shift and go to state 53
    oneidassign                    shift and go to state 55

state 29

    (43) assign -> ASSIGN . lhs = wireexpr
    (61) lhs -> . ID
    (62) lhs -> . ID [ arithexpr : arithexpr ]
    (63) lhs -> . { lhsconcat }

    ID              shift and go to state 57
    {               shift and go to state 58

    lhs                            shift and go to state 56

state 30

    (44) always -> ALWAYS . @ sensitivity alwayscontblock

    @               shift and go to state 59


state 31

    (45) always -> ALWAYSFF . @ sensitivity alwayscontblock

    @               shift and go to state 60


state 32

    (46) always -> ALWAYSCOMB . alwayscontblock
    (50) alwayscontblock -> . BEGIN alwayscont END

    BEGIN           shift and go to state 62

    alwayscontblock                shift and go to state 61

state 33

    (40) wiretype -> WIRE .

    [               reduce using rule 40 (wiretype -> WIRE .)
    ID              reduce using rule 40 (wiretype -> WIRE .)
    ;               reduce using rule 40 (wiretype -> WIRE .)


state 34

    (41) wiretype -> REG .

    [               reduce using rule 41 (wiretype -> REG .)
